[gd_scene load_steps=30 format=2]

[ext_resource path="res://Enemies/Slime.gd" type="Script" id=1]
[ext_resource path="res://Shadows/MediumShadow.png" type="Texture" id=2]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=5]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=7]
[ext_resource path="res://Effects/AnimationPlayer.tscn" type="PackedScene" id=8]
[ext_resource path="res://WhiteColor.shader" type="Shader" id=9]
[ext_resource path="res://Enemies/robot.png" type="Texture" id=10]

[sub_resource type="ShaderMaterial" id=13]
resource_local_to_scene = true
shader = ExtResource( 9 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 10 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 10 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 10 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 10 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 10 )
region = Rect2( 0, 150, 150, 150 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 10 )
region = Rect2( 150, 150, 150, 150 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 10 )
region = Rect2( 300, 150, 150, 150 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 10 )
region = Rect2( 450, 150, 150, 150 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 10 )
region = Rect2( 600, 150, 150, 150 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 10 )
region = Rect2( 0, 300, 150, 150 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 10 )
region = Rect2( 150, 300, 150, 150 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 10 )
region = Rect2( 300, 300, 150, 150 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "Animate",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=9]
radius = 10.0
height = 22.0

[sub_resource type="CapsuleShape2D" id=27]
radius = 20.0

[sub_resource type="CircleShape2D" id=11]
radius = 24.0

[sub_resource type="CircleShape2D" id=12]
radius = 102.0

[node name="Robot" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 13 )
position = Vector2( 7, -30 )
scale = Vector2( 0.353333, 0.373333 )
frames = SubResource( 8 )
animation = "Animate"
frame = 7
playing = true

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
rotation = -1.5708
shape = SubResource( 9 )

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 8, -10 )
rotation = -1.5708
shape = SubResource( 27 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
visible = false
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 4, -10 )
shape = SubResource( 11 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 5

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 7 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 12 )

[node name="SoftCollision" parent="." instance=ExtResource( 5 )]

[node name="AnimationPlayer" parent="." instance=ExtResource( 8 )]
reset_on_save = false

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
[editable path="PlayerDetectionZone"]
